Fixed grammar errors and other linguistic problems

--- a/additional_content/openhacknice.html
+++ b/additional_content/openhacknice.html
@@ -1,4 +1,10 @@
-<span class="_modal_popup-close">&times;</span>
+<!DOCTYPE html>
+<html lang="en">
+<head></head>
+
+<body>
+
+<i class="_modal_popup-close fa fa-times"></i>
 <h2 class="w3-centered"> My first hackathon!</h2>
 <p>
     It was around May 2017. I was in the University of Nice Sophia-Antipolis(UNS) doing my first year of the master.
@@ -6,43 +12,61 @@
 </p>
 
 <p>
-    I heard about a <a href="https://projects.tmforum.org/wiki/display/API/Open+Hack+TM+Forum+Live+Nice+2017">Open API competition, called OpenHack</a>,
-    held by TMForum and hosted in the city center of Nice. The Open API competition was about developing a solution using any API offered by different
-    sponsors like Salesforce, Vodafone, Huawei, City of Nice and the own TMForum.
-    <br>
-    At that time, I was tired of studying and I decided to go there by my own.
-    There were advertised six prizes for the winners and finalists of the event, however I preferred to focus on meet new people and learn new things.
+    I heard about a
+    <a href="https://projects.tmforum.org/wiki/display/API/Open+Hack+TM+Forum+Live+Nice+2017">
+      Open API competition, called OpenHack
+    </a>,
+    held by TMForum and hosted in the city center of Nice. The Open API competition was about developing a solution using any
+    API offered by different sponsors like Salesforce, Vodafone, Huawei, City of Nice and the own TMForum.
+    <br />
+    At that time, I was tired of studying and I decided to go there by my own. There were advertised six prizes for
+    the winners and finalists of the event, however I preferred to focus on meet new people and learn new things.
 </p>
 <img src="imgs/openhack/openhack_event.jpg"/>
 
 <p>
-    Once inside the Acropolis Convention of Nice, I ran into more people that I expected. I did not know anyone previously, so I started to ask randomly
-    different groups and individuals to join them, eventually I met another Spaniard and we set up a team with other 3 people. We created an exciting team,
-    which was called RHIME due our given name initials. (Ronan, Hugo, Ignacio, Marcos and Eman)
+    Once inside the Acropolis Convention of Nice, I ran into more people that I expected. I did not know anyone previously, so
+    I started to ask randomly different groups and individuals to join them, eventually I met another Spaniard and we set up
+    a team with other 3 people. We created an exciting team, which was called RHIME due our given name initials.
+    (Ronan, Hugo, Ignacio, Marcos and Eman)
 </p>
 
 <img src="imgs/openhack/team_working.jpg"/>
 
-<a>
-    We were learning which APIs we can used to build our solution and how to use the Salesforce platform to connect the different providers. Moreover, we
-    discovered tools such as <a href="https://www.getpostman.com/">Postman</a> or <a href="https://www.electricimp.com/">electric imp</a>.
-    In a couple of hours, we started to work like a good connected team. Since the very beginning we decided our core idea, goals and different features that our demo
-    should contain. We even worked with a business canvas!!
-    <br><br>
+<p>
+    We were learning which APIs we can used to build our solution and how to use the Salesforce platform to connect the
+    different providers. Moreover, we discovered tools such as
+    <a href="https://www.getpostman.com/">Postman</a>
+    or
+    <a href="https://www.electricimp.com/">electric imp</a>.
+    In a couple of hours, we started to work like a good connected team. Since the very beginning we decided our core idea,
+    goals and different features that our demo should contain. We even worked with a business canvas!!
+    <br /><br />
     With the motivation and clear objectives it was just a matter of time to build a successful demo.
 </p>
 
 <p>
-    The idea we worked on was about addressing city issue management with the gamificated assistance of citizens. The platform was connected with the users by
-    any social network, in our cased we used twitter. We decided to use the IoT and ticket handling of Salesforce, with Huawei and Vodafone APIs to manage the drones and the user accounts.
-    In addition, we added in the demo an integration with google cloud AI to pre-analyse the images received from the drone (setting the priority and some labels related to the case i.e. fire or massive flooding).
-    <br><br>
-    On the morning of 16th May we prepared a pitch and some hours later we pitched in front of the jury, rest of the participants and other visitors that decided to see the final results. There were good ideas and demos.
-    For instance there was a system that used drones to control pollution in ports, a system made by local students to pay by using sim or a system that managed the water use in green places with a tensorflow neural network.
-    <br><br>
-    A few hours later, after the jury discussion, they considered that we created a very successful demo and they awarded us with three out of six prizes.
-    Including <a href="https://www.tmforumlive.org/open-hack-nice/">2nd place</a>, <a href="https://twitter.com/Abhi_Sur/status/864811449696124928">Salesforce special award</a> and Huawei special award (invitation to HCE in Berlin).
-    <br><br>
+    The idea we worked on was about addressing city issue management with the gamificated assistance of citizens. The platform
+    was connected with the users by any social network, in our cased we used twitter. We decided to use the IoT and ticket
+    handling of Salesforce, with Huawei and Vodafone APIs to manage the drones and the user accounts. In addition, we added in
+    the demo an integration with google cloud AI to pre-analyse the images received from the drone (setting the priority and
+    some labels related to the case i.e. fire or massive flooding).
+    <br /><br />
+    On the morning of 16th May we prepared a pitch and some hours later we pitched in front of the jury, rest of the
+    participants and other visitors that decided to see the final results. There were good ideas and demos. For instance
+    there was a system that used drones to control pollution in ports, a system made by local students to pay by using sim
+    or a system that managed the water use in green places with a tensorflow neural network.
+    <br /><br />
+    A few hours later, after the jury discussion, they considered that we created a very successful demo and they awarded us with
+    three out of six prizes. Including
+    <a href="https://www.tmforumlive.org/open-hack-nice/">
+      2nd place
+    </a>,
+    <a href="https://twitter.com/Abhi_Sur/status/864811449696124928">
+      Salesforce special award
+    </a>
+    and Huawei special award (invitation to HCE in Berlin).
+    <br /><br />
     Honestly, I enjoyed very much the event so far but receiving the awards was really amazing.
 </p>
 
@@ -52,5 +76,13 @@
     After a couple of weeks, the organizer asked to upload a video of our demo, showing its features. The video is attached below.
 </p>
 
-<iframe src="https://player.vimeo.com/video/221308594" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/221308594">Open Hack Water Savers project demo</a> from <a href="https://vimeo.com/tmforumorg">TM Forum</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<iframe src="https://player.vimeo.com/video/221308594" width="640" height="360" frameborder="0"
+ webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
+<p>
+  <a href="https://vimeo.com/221308594">Open Hack Water Savers project demo</a> from
+  <a href="https://vimeo.com/tmforumorg">TM Forum</a> on <a href="https://vimeo.com">Vimeo</a>.
+</p>
+
+</body>
+
+</html>
