--- a/additional_content/personal_server.html
+++ b/additional_content/personal_server.html
@@ -1,4 +1,10 @@
-<span class="_modal_popup-close">&times;</span>
+<!DOCTYPE html>
+<html lang="en">
+<head></head>
+
+<body>
+
+<i class="_modal_popup-close fa fa-times"></i>
 <h2 class="w3-centered"> One server to rule them all!!</h2>
 <p>
     Right now it is a project on DEVELOPMENT but stay tuned I will update little by little!!
@@ -17,3 +23,7 @@
     In construction & development...
 </p>
 <img src="imgs/in_construction.jpg" alt="Sign with a label that contains under construction check back soon"/>
+
+</body>
+
+</html>
