--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <div class="w3-container w3-padding-64">
                 <div class="w3-container intro_text">
                 <h4>Projects</h4>
-                <p>Right now it seems empty, but wait a little you will see my new projects :D</p>
-                <p>In this space, I will attach all kind of projects. Why do not you take a look? maybe one of them get your attention.</p>
+                <p>Right now it seems empty, but wait for a little you will see my new projects :D</p>
+                <p>In this space, I will attach all kind of projects. Why do not you take a look? maybe one of them gets your attention.</p>
                 </div>
                 <div class="_box_container _reacting_infobox">
                     <div class="_infobox" id="degree_project">
@@ -222,10 +222,10 @@
             </div>
             <div class="switching_content" id="text">
                 <div id="left_text" itemscope itemtype="https://schema.org/Person">
-                  <img id="about_in_hce" src="imgs/working_in_success_cases_hce.jpg" alt="marcos in the HCE in berlin"/>
+                  <img id="about_in_hce" src="imgs/working_in_success_cases_hce.jpg" alt="Marcos in the HCE in Berlin"/>
                    <p id="about_text1">
                         I am <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
-                        Ironically, due to my last surname you may guess that you found another 'crazy' <span itemprop="nationality">Spaniard</span>...
+                        Ironically, due to my last surname, you may guess that you found another 'crazy' <span itemprop="nationality">Spaniard</span>...
                         well, you are not far from being right.
                         Some classmates would say that I am finishing the Master 2 in Data Science in the
                         <span itemprop="alumniOf">Technical University of Madrid (UPM)</span>, so you may consider me a
@@ -233,18 +233,18 @@
                     </p>
                     <p id="about_text2">
                         My interest are quite large and mainly focused, but not limited, on <span itemprop="seeks">computer engineering and</span>, by extension, <span itemprop="seeks">data science</span>.
-                        I like robotics, software developing (including videogames :P), security, networking, data mining and machine learning. I like to learn something useful everyday and I do my best to achieve it.
+                        I like robotics, software developing (including video games :P), security, networking, data mining and machine learning. I like to learn something useful every day and I do my best to achieve it.
                     </p>
 
-                   <img id="about_in_hockey" src="imgs/in_hockey.jpg" alt="marcos in the Field Hockey pitch of Madrid Federation"/>
+                   <img id="about_in_hockey" src="imgs/in_hockey.jpg" alt="Marcos in the Field Hockey pitch of Madrid Federation"/>
                     <p id="about_text3">
                        <br>
-                        If I had to sum up myself, I would say that I am a problem solving person. I really like easy problems and
+                        If I had to sum up myself, I would say that I am a problem-solving person. I really like easy problems and
                         medium ones, but hard problems are not big deal since one can split them and
                         have several small lovely problems instead!
                     </p>
                     <p id="about_text4">
-                        When I am not working nor developing/researching projects by my own, I like to hang out with friends, play some videogames and do all kind of sports.
+                        When I am not working nor developing/researching projects on my own, I like to hang out with friends, play some video games and do all kind of sports.
                         Particularly, I love hockey and the one that I play is Field Hockey.
                         Field hockey is usually misunderstood with the other variants of hockey i.e. Ice Hockey or Roller Hockey which are quite different.
                     </p>
