--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 
     <title>
-@en      Personal Website of Marcos Bernal
-@es      Página personal de Marcos Bernal
+     Personal Website of Marcos Bernal
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,8 +61,7 @@
 <!-- If javascript is not enabled, warning the user -->
 <noscript>
     <div class="noscriptmsg" style="background-color: red; font-size: large; font-weight: bold; text-align: center; border: 5px solid yellow;">
-@en        Why don't you ENABLE JavaScript??  Not only design and content will be better, but also some features...
-@es        ¿¿Por qué no ACTIVAS JavaScript??  No solo el diseño y el contenido es mejor, sino que algunas características...
+       Why don't you ENABLE JavaScript??  Not only design and content will be better, but also some features...
     </div>
 </noscript>
 
@@ -74,20 +72,16 @@
     <div class="aux_black_bar"></div>
     <div class="w3-bar">
         <a href="#nav_menu" class="w3-bar-item w3-button"><i class="fa fa-home"></i>
-@en          Welcome
-@es          Bienvenido
+         Welcome
         </a>
         <a href="#Experience" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i>
-@en          Experience
-@es          Experiencia
+         Experience
         </a>
         <a href="#AboutMe" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i>
-@en           AboutMe
-@es           Sobre mi
+          AboutMe
          </a>
         <a href="#Contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
-@en           Contact
-@es           Contacto
+          Contact
          </a>
         <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-twitter w3-hover-opacity"></i></a>
         <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
@@ -101,20 +95,16 @@
         <button class="dropdown_button"></button>
         <div id="myDropdownNav" class="dropdown_button-content">
             <a href="#nav_menu">
-@en          Welcome
-@es          Bienvenido
+         Welcome
             </a>
             <a href="#Experience">
-@en          Experience
-@es          Experiencia
+         Experience
             </a>
             <a href="#AboutMe">
-@en              About me
-@es              Sobre mi
+             About me
             </a>
             <a href="#Contact">
-@en           Contact
-@es           Contacto
+          Contact
             </a>
         </div>
     </div>
@@ -130,15 +120,12 @@
             <div class="w3-container w3-black welcome_text">
                 <div class="text_centered">
                     <h4>
-@en          Welcome!
-@es          ¡Bienvenido!
+         Welcome!
                     </h4>
                     <h5>
-@en                      I'm Marcos Bernal, a computer engineering student.
-@es                      Soy Marcos Bernal, un estudiante de ingeniería informática.
+                     I'm Marcos Bernal, a computer engineering student.
                             <br />
-@en                        Developing and creating new ideas and projects!
-@es                        ¡Desarrollando y creando nuevas ideas y proyectos!
+                       Developing and creating new ideas and projects!
                     </h5>
                 </div>
             </div>
@@ -151,16 +138,13 @@
             <div class="w3-container w3-padding-64">
                 <div class="w3-container intro_text">
                 <h4>
-@en                  Projects
-@es                  Proyectos
+                 Projects
                 </h4>
                 <p>
-@en                  Right now it seems empty, but wait for a little you will see my new projects :D
-@es                  Ahora mismo esta un poco vacío, pero espera un poco ¡que hay varios proyectos en desarrollo!
+                 Right now it seems empty, but wait for a little you will see my new projects :D
                 </p>
                 <p>
-@en                  In this space, I will attach all kind of projects. Why do not you take a look? maybe one of them gets your attention.
-@es                  Aquí referenciare proyectos de todo tipo. Quizas alguno llama tu atencion, ¿por qué no le echas un vistazo?
+                 In this space, I will attach all kind of projects. Why do not you take a look? maybe one of them gets your attention.
                 </p>
                 </div>
                 <div class="_box_container _reacting_infobox">
@@ -204,16 +188,13 @@
             <div class="w3-container w3-padding-64">
                 <div class="w3-container intro_text">
                 <h4>
-@en                  Experiences
-@es                  Experiencias
+                 Experiences
                 </h4>
                 <p>
-@en                   Well, let's present my 'wannabe' blog.
-@es                   Bueno, te presento my pseudo-blog.
+                  Well, let's present my 'wannabe' blog.
                 </p>
                 <p>
-@en                  Here you should find short articles containing my opinion as well as some experiences that may be worthy to share.
-@es                  Aquí encontraras pequeñas experiencias que creo que son lo suficientemente interesantes para ser contadas.
+                 Here you should find short articles containing my opinion as well as some experiences that may be worthy to share.
                 </p>
                 </div>
                 <div class="_box_container _reacting_infobox">
@@ -271,8 +252,7 @@
     <div class="w3-container" id="AboutMe">
         <div class="w3-padding-64 description">
             <h4>
-@en              Allow me to introduce myself...
-@es              Permíteme presentarme...
+             Allow me to introduce myself...
             </h4>
             <div class="showing_button">
                 <img src="imgs/text_icon.svg" id="text_button" alt="Button to show all text in description"/>
@@ -281,45 +261,29 @@
                 <div id="left_text" itemscope itemtype="https://schema.org/Person">
                   <img id="about_in_hce" src="imgs/working_in_success_cases_hce.jpg" alt="Marcos in the HCE in Berlin"/>
                    <p id="about_text1">
-@en                        I am <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
-@en                        Ironically, due to my last surname, you may guess that you found another 'crazy' <span itemprop="nationality">Spaniard</span>...
-@en                        well, you are not far from being right. Some classmates would say that I am finishing the Master 2 in Data Science in the
-@en                        <span itemprop="alumniOf">Technical University of Madrid (UPM)</span>, so you may consider me a
-@en                        <span itemprop="hasOccupation">data science student</span>.
-@es                        Soy <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
-@es                        Irónicamente, debido a mi apellido, podrías suponer que has dado con otro 'loco' <span itemprop="nationality">español</span>...
-@es                        bueno, tampoco estarías muy desencaminado siendo honestos. Algunos compañeros dirían que estoy acabando el master 2 en ciencia de datos
-@es                        en la <span itemprop="alumniOf">Universidad Politécnica de Madrid (UPM)</span>, así que quizás me podrías considerar un
-@es                        <span itemprop="hasOccupation">estudiante de ciencia de datos</span>.
+                       I am <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
+                       Ironically, due to my last surname, you may guess that you found another 'crazy' <span itemprop="nationality">Spaniard</span>...
+                       well, you are not far from being right. Some classmates would say that I am finishing the Master 2 in Data Science in the
+                       <span itemprop="alumniOf">Technical University of Madrid (UPM)</span>, so you may consider me a
+                       <span itemprop="hasOccupation">data science student</span>.
                     </p>
                     <p id="about_text2">
-@en                        My interests are quite large and mainly focused, but not limited, on <span itemprop="seeks">computer engineering and</span>,
-@en                        by extension, <span itemprop="seeks">data science</span>. I like robotics, software developing (including video games :P),
-@en                        security, networking, data mining and machine learning. I like to learn something useful every day and I do my best to achieve it.
-@es                        Mis intereses son numerosos y principalmente relacionados, aunque no limitados, a <span itemprop="seeks">ingeniería informática y</span>
-@es                        , por extensión, <span itemprop="seeks">ciencia de datos</span>. También me gusta la robótica, el desarrollo de software (incluyendo el
-@es                        videojuegos :P), seguridad, redesm minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada dia y
-@es                        pongo mi empeño para conseguirlo.
+                       My interests are quite large and mainly focused, but not limited, on <span itemprop="seeks">computer engineering and</span>,
+                       by extension, <span itemprop="seeks">data science</span>. I like robotics, software developing (including video games :P),
+                       security, networking, data mining and machine learning. I like to learn something useful every day and I do my best to achieve it.
                     </p>
 
                    <img id="about_in_hockey" src="imgs/in_hockey.jpg" alt="Marcos in the Field Hockey pitch of Madrid Federation"/>
                     <p id="about_text3">
                        <br>
-@en                        If I had to sum up myself, I would say that I am a problem-solving person. I really
-@en                        like easy problems and medium ones, but hard problems are not big deal since one can
-@en                        split them and have several small lovely problems instead!
-@es                        Si tuviese que describirme en un par de lineas, diría que soy una persona que le gusta resolver problemas.
-@es                        Me encanta resolver problemas sencillos y otros no tan fáciles, pero los problemas más
-@es                        compejos tampoco son un obstaculo infranqueable puesto que los puedes dividir y transformar
-@es                        en varios problemas fáciles de afrontar!
+                       If I had to sum up myself, I would say that I am a problem-solving person. I really
+                       like easy problems and medium ones, but hard problems are not big deal since one can
+                       split them and have several small lovely problems instead!
                     </p>
                     <p id="about_text4">
-@en                        When I am not working nor developing/researching projects on my own, I like to hang out with friends, play some video games and do all kind of sports.
-@en                        Particularly, I love hockey and the one that I play is Field Hockey.
-@en                        Field hockey is usually misunderstood with the other variants of hockey i.e. Ice Hockey or Roller Hockey which are quite different.
-@es                        Cuando no estoy trabajando o desarrollando algún proyecto por mi cuenta, me gusta quedar con mis colegas, jugar a algun videojuego y practicar todo tipo
-@es                        de deportes, especialmente, el hockey. Entre las diferentes variantes el que practico es hockey hierba.
-@es                        Normalmente, el hockey hierba es confundido con las otras variantes ej. hockey hielo o hockey sobre patines los cuales son muy diferentes.
+                       When I am not working nor developing/researching projects on my own, I like to hang out with friends, play some video games and do all kind of sports.
+                       Particularly, I love hockey and the one that I play is Field Hockey.
+                       Field hockey is usually misunderstood with the other variants of hockey i.e. Ice Hockey or Roller Hockey which are quite different.
                     </p>
 
                 </div>
@@ -344,16 +308,14 @@
         <!-- If javascript is not enabled, warning the user -->
         <noscript>
             <div class="noscriptmsg" style="background-color: red; font-size: large; font-weight: bold; text-align: center; border: 5px solid yellow;">
-@en        Why don't you ENABLE JavaScript??  Not only design and content will be better, but also some features...
-@es        ¿¿Por qué no ACTIVAS JavaScript??  No solo el diseño y el contenido es mejor, sino que algunas características...
+       Why don't you ENABLE JavaScript??  Not only design and content will be better, but also some features...
             </div>
         </noscript>
 
         <div class="w3-container w3-padding-64">
             <div class="block_comm"></div>
             <h4>
-@en              Contact
-@es              Contacto
+             Contact
             </h4>
             <form id="contact_form">
               <div class="w3-row">
@@ -362,8 +324,7 @@
                         <div class="w3-col"><i class="w3-xxlarge fa fa-user"></i></div>
                         <div class="w3-rest">
                             <input class="w3-input w3-border mandatory_form" name="firstname" type="text" placeholder="
-@en *First Name
-@es *Nombre
+*First Name
                             ">
                         </div>
                     </div>
@@ -388,8 +349,7 @@
                         <div class="w3-col"><i class="w3-xxlarge fa fa-pencil"></i></div>
                         <div class="w3-rest">
                             <input class="w3-input w3-border mandatory_form" name="subject" type="text" placeholder="
-@en *Subject
-@es *Asunto
+*Subject
                             ">
                         </div>
                     </div>
@@ -397,13 +357,11 @@
               </div>
               <div id="msg_conf" class="w3-row w3-section">
                  <textarea class="mandatory_form" name="message" rows="10" cols="30" style="width: 100%;" placeholder="
-@en *Hi Marcos, ...
-@es *Hola Marcos, ...
+*Hi Marcos, ...
                  "></textarea>
               </div>
               <button class="w3-button w3-block w3-section waiting_mess w3-padding" id="message_button"><i class="fa fa-paper-plane"></i>
-@en                Send Message!
-@es                Enviar Mensaje!
+               Send Message!
               </button>
             </form>
 
@@ -484,23 +442,19 @@
         <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-twitter"></i></a>
     </div>
     <p>
-@en      Created with
-@es      Creado con
+     Created with
       <a href="https://github.com/MarcosBernal/marcosbernal.github.io"><span class="fa fa-heart"></span>
-@en         by
-@es         por
+        by
          <span style="font-weight: bold; ">Marcos Bernal</span>
        </a>.
     </p>
     <div class="license">
         <p class="w3-small"><span>
-@en          Content licensed
-@es          Contenido licenciado
+         Content licensed
           <a href="https://creativecommons.org/licenses/by-sa/4.0/" style="font-weight: bold;" >CC BY-SA</a></span> © 2017 Marcos Bernal España</p>
         <a href="https://github.com/MarcosBernal/marcosbernal.github.io" class="w3-small">
           <p>
-@en             Details and credits in Marcos' github repo
-@es             Detalles y créditos en el repositorio de github
+            Details and credits in Marcos' github repo
            </p>
         </a>
         <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
